--- a/index.html
+++ b/index.html
@@ -614,7 +614,11 @@
             <div class="bg-primary rounded-4xl p-16 text-center text-white border-2 border-white/10 card-hover max-w-7xl mx-auto shadow-2xl" data-aos="zoom-in">
                 <h2 class="font-heading text-3xl md:text-4xl font-bold mb-4">Ready to Grow Together?</h2>
                 <p class="text-blue-100 mb-8 font-normal text-lg font-sans">Join thousands of partners already benefiting from WELIVING</p>
-                <button class="bg-white text-primary px-10 py-4 rounded-full font-bold text-lg hover:bg-blue-50 transition transform hover:scale-105 shadow-md mx-auto block font-sans">Get Started Today</button>
+                <a href="#contact">
+                    <button class="bg-white text-primary px-10 py-4 rounded-full font-bold text-lg hover:bg-blue-50 transition transform hover:scale-105 shadow-md mx-auto block font-sans">
+                        Get Started Today
+                    </button>
+                </a>
             </div>
         </div>
     </section>
